fix(app): dark mode for the timing trace event tab (#11334)
This modifies the uniform brightness colors to instead use `lch` which
is based on HSL coloring
https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Values/color_value/lch

--- a/app/root/colors.css
+++ b/app/root/colors.css
@@ -414,16 +414,6 @@
   --color-text-secondary: var(--color-gray-600-alt);
   --color-text-tab-inactive: var(--color-gray-500);
   --color-text-tertiary: var(--color-gray-500-alt);
-  --color-trace-border: var(--color-gray-200);
-  --color-trace-button-active-text: var(--color-black);
-  --color-trace-button-bg: var(--color-overlay-gray-50-60);
-  --color-trace-button-focus: var(--color-blue-300);
-  --color-trace-button-text: var(--color-gray-700);
-  --color-trace-hovercard-shadow: var(--color-shadow-27);
-  --color-trace-scrollbar-bg: var(--color-gray-50);
-  --color-trace-scrollbar-corner: var(--color-gray-300);
-  --color-trace-scrollbar-thumb: var(--color-gray-400);
-  --color-trace-zoom-factor-bg: var(--color-yellow-highlight);
   --color-tree-node-size-text: var(--color-black);
   --color-trends-divider: var(--color-gray-200);
   --color-trends-hovercard-bg: var(--color-overlay-light-solid);
@@ -668,16 +658,6 @@
   --color-text-secondary: var(--color-gray-400);
   --color-text-label: var(--color-gray-400);
   --color-text-tertiary: var(--color-gray-500);
-  --color-trace-border: var(--color-gray-900);
-  --color-trace-button-active-text: var(--color-white);
-  --color-trace-button-bg: var(--color-gray-900);
-  --color-trace-button-focus: var(--color-blue-400);
-  --color-trace-button-text: var(--color-white);
-  --color-trace-hovercard-shadow: var(--color-shadow-40);
-  --color-trace-scrollbar-bg: var(--color-gray-900-alt3);
-  --color-trace-scrollbar-corner: var(--color-gray-900);
-  --color-trace-scrollbar-thumb: var(--color-gray-800);
-  --color-trace-zoom-factor-bg: var(--color-amber-800-alt);
   --color-tree-node-size-text: var(--color-gray-200);
   --color-trends-divider: var(--color-gray-900-alt);
   --color-trends-hovercard-bg: var(--color-gray-800);
